Fix: Figcaption center and improved spacing on slieds

--- a/static/reveal.js/css/theme/finn.css
+++ b/static/reveal.js/css/theme/finn.css
@@ -121,6 +121,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
 }
 
 .reveal .slides section.c2 h1,
@@ -138,7 +139,7 @@ body {
 .reveal .slides section.c2 figure,
 .reveal .slides section.c2 iframe {
   flex-basis: calc(50% - 1em);
-  margin: 0;
+  /*margin: 0;*/
 }
 
 .c2 ~ ul,
@@ -389,6 +390,7 @@ body {
 .reveal figcaption {
   color: #777;
   font-size: 0.6em;
+  text-align: center;
 }
 
 /*********************************************
